codex-rs/tui-chatwidget/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: terminal.backend().vt100().screen().contents()
---

 
  Would you like to run the following command?
 
  Reason: this is a test reason such as one that would be produced by the model
 
  $ echo hello world
 
› 1. Yes, proceed (y)
  2. Yes, and don't ask again for commands that start with `echo hello world` (p)
  3. No, and tell Codex what to do differently (esc)
 
  Press enter to confirm or esc to cancel
